	upgrades when we are the top most window.

2007-10-30  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_install_loop): Use new logical id
	ai_ni_software_update_installed to report that the 'update all'
	process succeeded.
	(ip_end): Use new logical id ai_ni_updates_restart to report that
	device will be restarted after updating all the packages.

2007-10-29  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (write_available_updates_file): New.  We list
	the packages explicitly now, not just their count.  Together with
	the list of updates seen by the user in the "Check for Updates",
	this allows for bullet proof determination whether the update
	notifier should be blinking or not.
	(cmd_check_updates): Call it.
	(update_available_updates_file): Removed together with supporting
	routines.
	(cmd_get_package_list): Do not write the available-updates file.

	* src/update-notifier.h (SEEN_UPDATES_FILE): New.
	* src/update-notifier.c (check_for_updates): Don't try to prevent
	multiple parallel invocations of the apt-worker here, it does its
	own locking now.
	(update_menu, update_state): Renamed former to latter.  Read both
	available updates and seen updates and recompute state from this.
	Set blinking state as appropriate.
	(button_pressed): Don't recreate menu here.
	(dbus_filter): Handle new "check-state" method by calling
	update_state.

2007-10-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker.cc (load_failed_catalogues): Added an extra check
	to neither read the failed catalogues file nor log an error when
	the file is not present at disk (no errors during last refresh).

	* src/util.h, src/util.cc (ask_yes_no_with_title): New function
	like ask_yes_no, but it constructs a real dialog with a title.
	(make_global_package_list): Fixed a mem leak found with valgrind.

	* src/operations.h (INSTALL_TYPE_UPGRADE_ALL_PACKAGES): New
	install type added for the new 'Update all' feature.
